<resources>
    <string name="app_name">FTU Bluetooth</string>
    <string name="app_title">FTU Bluetooth</string>
    <string name="action_settings">Settings</string>
    <string name="test">Test datatransfer</string>
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="main_menu_1">Real-Time Value</string>
    <string name="main_menu_2">Remote Control</string>
    <string name="main_menu_3">Param Setting</string>
    <string name="main_menu_4">SOE</string>
    <string name="main_menu_5">Failure Info</string>
    <string name="main_menu_6">Network Parameter</string>
    <string name="main_menu_7">Authority</string>
    <string name="menu_1_1">Out/In Status</string>
    <string name="menu_1_2">Protect Status</string>
    <string name="menu_1_3">Realtime Power</string>
    <string name="menu_1_4">Others</string>
    <string name="menu_2_1">Switch Off</string>
    <string name="menu_2_2">Switch On</string>
    <string name="menu_4_1">SOE1</string>
    <string name="menu_4_2">SOE2</string>
    <string name="menu_5_1">Failure info 1</string>
    <string name="menu_5_2">Failure info 2</string>
    <string name="menu_6_1">Network Card Parameter</string>
    <string name="menu_6_3">Network Connection</string>
    <string name="menu_6_2">Serial Port Parameter</string>
    <string name="send_message">Sending message to</string>
    <string name="receive_message">Receiving message from</string>
    <string name="tbd">Reserved TBD</string>
    <string name="hex_char">0123456789abcdefABCDEF</string>
    <string name="hex_only">hexadecimal character only</string>
    <string name="backtohome">Back to Home</string>
    <string name="kairu26">Vol over upper</string>
    <string name="kairu27">Vol over lower</string>
    <string name="kairu28">Over current 1</string>
    <string name="kairu29">Over current 2</string>
    <string name="kairu30">Over current 3</string>
    <string name="kairu31">protect 6</string>
    <string name="kairu32">protect 7</string>
    <string name="kairu33">protect 8</string>
    <string name="kairu34">protect 9</string>
    <string name="kairu35">protect 10</string>
    <string name="kairu36">protect 11</string>
    <string name="kairu37">protect 12</string>
    <string name="kairu20">protect 1</string>
    <string name="kairu21">protect 2</string>
    <string name="kairu22">protect 3</string>
    <string name="kairu23">protect 4</string>
    <string name="kairu24">protect 5</string>
    <string name="kairu25">protect 6</string>
    <string name="yaoce01">Ua1: </string>
    <string name="yaoce02">Ub1: </string>
    <string name="yaoce03">Uc1: </string>
    <string name="yaoce04">Ua2: </string>
    <string name="yaoce05">Ub2: </string>
    <string name="yaoce06">Uc2: </string>
    <string name="yaoce07">la: </string>
    <string name="yaoce08">lb: </string>
    <string name="yaoce09">lc: </string>
    <string name="yaoce10">3U0: </string>
    <string name="yaoce11">3I0: </string>
    <string name="yaoce12">Uab: </string>
    <string name="yaoce13">Ubc: </string>
    <string name="yaoce14">Uca: </string>
    <string name="yaoce15">P: </string>
    <string name="yaoce16">Q: </string>
    <string name="yaoce17">Cos: </string>
    <string name="yaoce18">Frequency: </string>
    <string name="yaoce19">Temperature: </string>
    <string name="yaoce20">Direct current: </string>
    <string name="yaoce21">EP: </string>
    <string name="yaoce22">-E.P: </string>
    <string name="yaoce23">E.Q: </string>
    <string name="yaoce24">-E.Q: </string>
    <string name="old_pwd">Old Password: </string>
    <string name="new_pwd">New Password: </string>
    <string name="new_pwd_again">New Password Again: </string>
    <string name="remote_id">Switch No.: </string>
    <string name="preset">Preset</string>
    <string name="execute">Execute</string>
    <string name="cancel">Cancel</string>
    <string name="exec_direct">Exec Direct</string>
    <string name="success">success</string>
    <string name="fail">fail</string>
    <string name="fault_holding">Fault Holding Time: </string>
    <string name="ftu_func">FTU Function</string>
    <string name="closed_loop">Closed loop function</string>
    <string name="power_loss">Power Loss</string>
    <string name="switching_off_time">Switch Off</string>
    <string name="get_power">Get Power</string>
    <string name="switch_on">Switch On</string>
    <string name="single_vol_loss">Single vol loss</string>
    <string name="switch_func">Switch Function</string>
    <string name="switch_time">Switch Time</string>
    <string name="quit">Quit</string>
    <string name="once">Once</string>
    <string name="twice">Twice</string>
    <string name="three">Three</string>
    <string name="once_time">Once Time</string>
    <string name="twice_time">Twice Time</string>
    <string name="three_time">Three Time</string>
    <string name="post_acceleration">Post Acceleration</string>
    <string name="post_acce_time">Time</string>
    <string name="Inrush_current_locking">Inrush current locking</string>
    <string name="twice_inrush">Twice Inrush Current Locking</string>
    <string name="harmonic_percent">Harmonic Percent(%)</string>
    <string name="enlarge_fix_inrush">Enlarge Fix Inrush</string>
    <string name="evading_Inrush_multi">Evading Inrush Multiple</string>
    <string name="evading_Inrush_time">Evading Inrush Time</string>
    <string name="number">#</string>
    <string name="name">Name</string>
    <string name="on_off">On|Off</string>
    <string name="type">Type</string>
    <string name="fixed_value">Fixed Value</string>
    <string name="time_limit">Time Limit(s)</string>
    <string name="inverse_time_lag">Inverse Time Type</string>
    <string name="inverse_time">Inverse Time Type:</string>
    <string name="mornal_inverse">Normal Inverse</string>
    <string name="abnormal_inverse">Abnormal_Inverse</string>
    <string name="extreme_inverse">Extreme Inverse</string>
    <string name="thermal_overload_inverse">Thermal Overload Inverse Current</string>
    <string name="fixed_table">Fixed Table</string>
    <string name="fixed_tab_name1">Voltage upper limit</string>
    <string name="fixed_tab_name2">Voltage lower limit</string>
    <string name="fixed_tab_name3">Over current 1</string>
    <string name="fixed_tab_name4">Over current 2</string>
    <string name="fixed_tab_name5">Over current 3</string>
    <string name="fixed_tab_name6">Zero-seq over-current</string>
    <string name="fixed_tab_name7">Zero-seq over-voltage</string>
    <string name="fixed_tab_name8">No-voltage Protection</string>
    <string name="fixed_tab_name9">Inverse time lag </string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="switch_in">Switch In</string>
    <string name="save">Save</string>
    <string name="num_limit">Exceed Maximun 655.35</string>
    <string name="num_limit_int">Exceed Maximun 65535</string>
    <string name="num_limit_byte">Exceed Maximun 255</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="config_confim">Loading config to the FTU device?</string>
    <string name="exit">exit</string>
    <string name="warning">warn</string>
    <string name="para_success">Save successful, will disconnect, pls re-connect</string>
    <string name="refresh">Refresh</string>
    <string name="pwd_title">Password Confirm</string>
    <string name="pwd_input">Please input password:</string>
    <string name="pwd">Please input password:</string>
    <string name="pwd_preference">8888</string>
    <string name="pwd_summary">Default pwd</string>
    <string name="pwd_pre_title">pwd for operation</string>
    <string name="pwd_confirm">Confirm Change</string>
    <string name="pwd_warn_old">Old password is wrong!</string>
    <string name="pwd_warn_new">New password first and second input are different.</string>
    <string name="pwd_warn">Password is wrong, pls re-input</string>
    <string name="super_pwd">87654321</string>
    <string name="pwd_success">密码修改成功</string>
    <string name="yaoxin20">故障检验软压板</string>
    <string name="yaoxin21">异常灯</string>
    <string name="yaoxin22">告警灯</string>
    <string name="yaoxin23">故障灯</string>
    <string name="yaoxin24">状态1灯</string>
    <string name="yaoxin25">状态2灯</string>
    <string name="yaoxin26">电压越上限</string>
    <string name="yaoxin27">电压越下限</string>
    <string name="yaoxin28">过流1段</string>
    <string name="yaoxin29">过流2段</string>
    <string name="yaoxin30">过流3段</string>
    <string name="yaoxin31">零序过流</string>
    <string name="yaoxin32">零序过压</string>
    <string name="yaoxin33">失压</string>
    <string name="yaoxin34">反时限过流</string>
    <string name="yaoxin35">重合闸动作</string>
    <string name="yaoxin36">重合器分</string>
    <string name="yaoxin37">重合器合</string>
    <string name="yaoxin_name">遥信名称</string>
    <string name="time">时间</string>
    <string name="issue">事件</string>
    <string name="start">启动</string>
    <string name="action">动作</string>
    <string name="recover">恢复</string>
    <string name="protect_obj">保护元件</string>
    <string name="fault_issue">事件</string>
    <string name="fault_value">故障量</string>
    <string name="action_time">动作时间</string>
    <string name="network_card">网卡</string>
    <string name="network_card1">网卡1</string>
    <string name="network_card2">网卡2</string>
    <string name="ip">IP:</string>
    <string name="maskcode">子网掩码:</string>
    <string name="gateway">网关:</string>
    <string name="serial">串口</string>
    <string name="serial_1">串口1</string>
    <string name="serial_2">串口2</string>
    <string name="serial_3">串口3</string>
    <string name="serial_4">串口4</string>
    <string name="serial_5">串口5</string>
    <string name="baudrate">波特率</string>
    <string name="check_bit">校验位</string>
    <string name="protocol">规约</string>
    <string name="prot_addr">规约地址</string>
    <string name="dot">.</string>
    <string name="connect_ip">连接IP:</string>
    <string name="port">端口号:</string>
    <string name="network_prot">网络协议:</string>
    <string name="as">本机作为:</string>
    <string name="connect_1">网络连接1:</string>
    <string name="connect_2">网络连接2:</string>
    <string name="connect_3">网络连接3:</string>
    <string name="baud_1">300</string>
    <string name="baud_2">600</string>
    <string name="baud_3">1200</string>
    <string name="baud_4">2400</string>
    <string name="baud_5">4800</string>
    <string name="baud_6">9600</string>
    <string name="baud_7">14400</string>
    <string name="baud_8">19200</string>
    <string name="baud_9">38400</string>
    <string name="baud_10">57600</string>
    <string name="baud_11">115200</string>
    <string name="baud_12">230400</string>
    <string name="baud_13">460800</string>
    <string name="baud_14">921600</string>
    <string name="checkbit_1">无</string>
    <string name="checkbit_2">偶</string>
    <string name="checkbit_3">奇</string>
    <string name="protocol_1">无</string>
    <string name="protocol_2">维护</string>
    <string name="protocol_3">modbus</string>
</resources>