<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="48dp"   
    android:layout_marginTop="40dp" 
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="20dp" 
    android:orientation="horizontal" >
    <TextView android:id="@+id/remote_id"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:text="@string/remote_id"
    />
    <Spinner android:id="@+id/spinner_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"     
        android:textAppearance="?android:attr/textAppearanceMedium"
        />
    </LinearLayout>
    
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="48dp"   
    android:layout_marginTop="30dp" 
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="horizontal" >
    <Button android:id="@+id/preset"        
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_weight="1"
        android:textColor="@android:color/black"
        android:text="@string/preset"
    />
    <Button android:id="@+id/execute"
        android:layout_width="100dp"
        android:layout_height="wrap_content"        
        android:textSize="20sp"
        android:layout_weight="1"
        android:text="@string/execute"        
        />
    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="48dp"   
    android:layout_marginTop="20dp" 
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="horizontal" >
    <Button android:id="@+id/cancel"        
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_weight="1"
        android:textColor="@android:color/black"
        android:text="@string/cancel"
    />
    <Button android:id="@+id/exec_direct"
        android:layout_width="100dp"
        android:layout_height="wrap_content"        
        android:textSize="20sp"
        android:layout_weight="1"
        android:text="@string/exec_direct"        
        />
    </LinearLayout>
</LinearLayout>
