<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fastScrollEnabled="true"
    android:transcriptMode="alwaysScroll"
    android:isScrollContainer="true"
    android:orientation="vertical">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"   
    android:layout_marginTop="10dp" 
    android:orientation="horizontal" >        
    <TextView android:id="@+id/yaoce_name_01"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/yaoce01"
        android:layout_marginLeft="15dp"
    />
    <TextView android:id="@+id/yaoce01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/tbd"
        android:layout_marginLeft="0dp"
    />    
    </LinearLayout>
    
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"    
    android:orientation="horizontal" >        
    <TextView android:id="@+id/yaoce_name_03"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/yaoce02"
        android:layout_marginLeft="15dp"
    />
    <TextView android:id="@+id/yaoce02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/tbd"
        android:layout_marginLeft="0dp"
    />    
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"    
    android:orientation="horizontal" >        
    <TextView android:id="@+id/yaoce_name_05"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/yaoce03"
        android:layout_marginLeft="15dp"
    />
    <TextView android:id="@+id/yaoce03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/tbd"
        android:layout_marginLeft="0dp"
    />    
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"    
    android:orientation="horizontal" >        
    <TextView android:id="@+id/yaoce_name_07"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/yaoce04"
        android:layout_marginLeft="15dp"
    />
    <TextView android:id="@+id/yaoce04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/tbd"
        android:layout_marginLeft="0dp"
    />    
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"    
    android:orientation="horizontal" >        
    <TextView android:id="@+id/yaoce_name_05"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/yaoce05"
        android:layout_marginLeft="15dp"
    />
    <TextView android:id="@+id/yaoce05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/tbd"
        android:layout_marginLeft="0dp"
    />    
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"    
    android:orientation="horizontal" >        
    <TextView android:id="@+id/yaoce_name_06"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/yaoce06"
        android:layout_marginLeft="15dp"
    />
    <TextView android:id="@+id/yaoce06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/tbd"
        android:layout_marginLeft="0dp"
    />    
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"    
    android:orientation="horizontal" >        
    <TextView android:id="@+id/yaoce_name_07"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/yaoce07"
        android:layout_marginLeft="15dp"
    />
    <TextView android:id="@+id/yaoce07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/tbd"
        android:layout_marginLeft="0dp"
    />    
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"    
    android:orientation="horizontal" >        
    <TextView android:id="@+id/yaoce_name_08"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/yaoce08"
        android:layout_marginLeft="15dp"
    />
    <TextView android:id="@+id/yaoce08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/tbd"
        android:layout_marginLeft="0dp"
    />    
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"    
    android:orientation="horizontal" >        
    <TextView android:id="@+id/yaoce_name_09"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/yaoce09"
        android:layout_marginLeft="15dp"
    />
    <TextView android:id="@+id/yaoce09"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/tbd"
        android:layout_marginLeft="0dp"
    />    
    </LinearLayout>
    
     <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"    
    android:orientation="horizontal" >        
    <TextView android:id="@+id/yaoce_name_10"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/yaoce10"
        android:layout_marginLeft="15dp"
    />
    <TextView android:id="@+id/yaoce10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/tbd"
        android:layout_marginLeft="0dp"
    />    
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"    
    android:orientation="horizontal" >        
    <TextView android:id="@+id/yaoce_name_11"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/yaoce11"
        android:layout_marginLeft="15dp"
    />
    <TextView android:id="@+id/yaoce11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/tbd"
        android:layout_marginLeft="0dp"
    />    
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"    
    android:orientation="horizontal" >        
    <TextView android:id="@+id/yaoce_name_12"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/yaoce12"
        android:layout_marginLeft="15dp"
    />
    <TextView android:id="@+id/yaoce12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/tbd"
        android:layout_marginLeft="0dp"
    />    
    </LinearLayout>
    
        <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"    
    android:orientation="horizontal" >        
    <TextView android:id="@+id/yaoce_name_13"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/yaoce13"
        android:layout_marginLeft="15dp"
    />
    <TextView android:id="@+id/yaoce13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/tbd"
        android:layout_marginLeft="0dp"
    />    
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"    
    android:orientation="horizontal" >        
    <TextView android:id="@+id/yaoce_name_14"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/yaoce14"
        android:layout_marginLeft="15dp"
    />
    <TextView android:id="@+id/yaoce14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/tbd"
        android:layout_marginLeft="0dp"
    />    
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"    
    android:orientation="horizontal" >        
    <TextView android:id="@+id/yaoce_name_15"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/yaoce15"
        android:layout_marginLeft="15dp"
    />
    <TextView android:id="@+id/yaoce15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/tbd"
        android:layout_marginLeft="0dp"
    />    
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"    
    android:orientation="horizontal" >        
    <TextView android:id="@+id/yaoce_name_16"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/yaoce16"
        android:layout_marginLeft="15dp"
    />
    <TextView android:id="@+id/yaoce16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/tbd"
        android:layout_marginLeft="0dp"
    />    
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"    
    android:orientation="horizontal" >        
    <TextView android:id="@+id/yaoce_name_17"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/yaoce17"
        android:layout_marginLeft="15dp"
    />
    <TextView android:id="@+id/yaoce17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/tbd"
        android:layout_marginLeft="0dp"
    />    
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"    
    android:orientation="horizontal" >        
    <TextView android:id="@+id/yaoce_name_18"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/yaoce18"
        android:layout_marginLeft="15dp"
    />
    <TextView android:id="@+id/yaoce18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/tbd"
        android:layout_marginLeft="0dp"
    />    
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"    
    android:orientation="horizontal" >        
    <TextView android:id="@+id/yaoce_name_19"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/yaoce19"
        android:layout_marginLeft="15dp"
    />
    <TextView android:id="@+id/yaoce19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/tbd"
        android:layout_marginLeft="0dp"
    />    
    </LinearLayout>
    
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"    
    android:orientation="horizontal" >        
    <TextView android:id="@+id/yaoce_name_20"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/yaoce20"
        android:layout_marginLeft="15dp"
    />
    <TextView android:id="@+id/yaoce20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/tbd"
        android:layout_marginLeft="0dp"
    />    
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"    
    android:orientation="horizontal" >        
    <TextView android:id="@+id/yaoce_name_21"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/yaoce21"
        android:layout_marginLeft="15dp"
    />
    <TextView android:id="@+id/yaoce21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/tbd"
        android:layout_marginLeft="0dp"
    />    
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"    
    android:orientation="horizontal" >        
    <TextView android:id="@+id/yaoce_name_22"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/yaoce22"
        android:layout_marginLeft="15dp"
    />
    <TextView android:id="@+id/yaoce22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/tbd"
        android:layout_marginLeft="0dp"
    />    
    </LinearLayout>
    
        <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"    
    android:orientation="horizontal" >        
    <TextView android:id="@+id/yaoce_name_23"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/yaoce23"
        android:layout_marginLeft="15dp"
    />
    <TextView android:id="@+id/yaoce23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/tbd"
        android:layout_marginLeft="0dp"
    />    
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"    
    android:orientation="horizontal" >        
    <TextView android:id="@+id/yaoce_name_24"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/yaoce24"
        android:layout_marginLeft="15dp"
    />
    <TextView android:id="@+id/yaoce24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:text="@string/tbd"
        android:layout_marginLeft="0dp"
    />    
    </LinearLayout>
</LinearLayout>

